add: Admin profile endpoint
